fix java 1.8